added basic style

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 <body>
     <header>
-        Guessing Game
+        Welcome!
     </header>
     <main>
         <section class="main-section">
             
-            <h1>Welcome to the guessing Game</h1>
+            <h1>Guessing Game</h1>
             <p id="output"></p>
-            <input type="text" id="input">
-            <button class="btn" id="guess-btn">Submit Guess</button>
-            <button class="btn" id="reset-btn">Reset game</button>
-
+            <input type="text" id="input"><br>
+            <button class="btn" id="guess-btn">Submit Guess</button><br>
+            <button class="btn" id="reset-btn">Reset game</button><br>
+            <span id="score">Your Score</span>
         </section>
     </main>
     <footer>
