tweaked the css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <section class="main-section">
             
             <h1>Guessing Game</h1>
-            <p id="output"></p>
+            <ul id="rules">
+            <li>You have 4 tries to win</li>
+            <li>Guess an integer between 0 and 10</li>
+            <li>We'll give you a few hints</li></ul>
             <input type="text" id="input"><br>
             <button class="btn" id="guess-btn">Submit Guess</button><br>
             <button class="btn" id="reset-btn">Reset game</button><br>
