late night overhaul of JS & CSS

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             <h1>Guessing Game</h1>
             <ul id="rules">
             <li>You have 4 tries to win</li>
-            <li>Guess an integer between 0 and 10</li>
+            <li>Guess an integer between 1 and 10</li>
             <li>We'll give you a few hints</li></ul>
-            <input type="text" id="input"><br>
+            <label for="input">Enter your guess here <span id="big-arrow">&#129054;</span></label>
+            <input type="text" class="guess-field" id="input"><br>
             <button class="btn" id="guess-btn">Submit Guess</button><br>
             <button class="btn" id="reset-btn">Reset game</button><br>
             <span id="score">Your Score</span>
