--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             <li>We'll give you a few hints</li></ul>
             <label for="input">Enter your guess here <span id="big-arrow">&#129054;</span></label>
             <input type="text" class="guess-field" id="input">Whats your guess?<br>
+            
             <button class="btn" id="guess-btn">Submit Guess</button><br>
-            <button class="btn" id="reset-btn">Reset game</button><br>
+            <button class="btn" id="reset-btn" type="button" onClick="window.location.reload()">Reset game</button><br>
+            
             <span id="score">Your Score</span>
         </section>
     </main>
