template literals added to js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Guess an integer between 1 and 10</li>
             <li>We'll give you a few hints</li></ul>
             <label for="input">Enter your guess here <span id="big-arrow">&#129054;</span></label>
-            <input type="text" class="guess-field" id="input">Whats your guess?<br>
+            <input type="text" class="guess-field" id="input"><br>
             
             <button class="btn" id="guess-btn">Submit Guess</button><br>
             <button class="btn" id="reset-btn" type="button" onClick="window.location.reload()">Reset game</button><br>
